--- a/card2.css
+++ b/card2.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blanchedalmond;
+    background-color: rgb(248, 200, 200);
 }
 #imogi {
 width: 20px;
@@ -8,16 +8,16 @@ height: 20px;
 }
 #fheading {
     text-align: center;
-    color: pink;
+    color: green;
 }
 #sheading {
     text-align: center;
-    color: maroon;
+    color: blue;
 
 }
 #theading {
     text-align: center;
-    color: maroon;
+    color: blue;
 }
 
 #photo {
@@ -26,12 +26,14 @@ height: 20px;
     margin-left: 250px;
     border-radius: 50%;
     border: white 2px solid;
+    
 }
 .div1 {
     background-color: white;
-    margin: 10px 200px;
+    margin: 10px 300px;
     padding: 10px 100px;
-     box-shadow: 5px 10px 8px gray;
+    box-shadow: 5px 10px 8px rgb(20, 107, 219);
+    border-radius: 10%;
 
 }
 .p {
@@ -44,15 +46,16 @@ height: 20px;
 
 .div2 {
     background-color: white;
-    margin: 10px 200px;
+    margin: 10px 300px;
      padding: 10px 100px;
-     box-shadow: 5px 10px 8px gray;
+     box-shadow: 5px 10px 8px rgb(20, 107, 219);
 }
 .div3 {
     background-color: white;
-    margin: 10px 200px;
+    margin: 10px 300px;
     padding: 10px 100px;
- box-shadow: 5px 10px 8px gray;
+ box-shadow: 5px 10px 8px rgb(20, 107, 219);
+ border-radius: 10%;
 }
 .list {
    margin-left: 50px;
